--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Codeforces Challenge</h1>
-  <p>Click the "Challenge a Friend" button on any problem page to get started.</p>
+  <p>Click the "Challenge a Friend" button on any problem page to get started!!!</p>
 </body>
 </html>
